--- a/argocd-demo-app.yaml
+++ b/argocd-demo-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: first-argocd-demo-app
+  name: apache-deployment
   namespace: argocd
 spec:
   project: default
